--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
+  background-color: bisque;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +12,132 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.fa{
+  color: white;
+  font-size: medium;
+  cursor: pointer;
+}
+
+.fa-times{
+  color: black;
+  font-size: 1.5em;
+}
+
+.container{
+  width: 60%;
+  min-height: 60vh;
+  margin: 2em auto;
+  border: 1.5px solid coral;
+  border-radius: 5px;
+  padding: 1em;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.596);
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.header .div1{
+  text-align: center;
+
+}
+
+.header .div2{
+  text-align: center;
+}
+
+.task .div3{
+  display: flex;
+  justify-content: space-between;
+}
+
+.task .div3 .icon{
+  text-align: center;
+  padding: 1em;
+}
+.header .div1 h1{
+  font-size: 2em;
+  padding: 0;
+  margin-top: -3px;
+  color: crimson;
+}
+
+.div2 .btn{
+  background-color: crimson;
+  padding: 1em 1.5em;
+  border: none;
+  border-radius: 5px;
+  font-size: larger;
+  color: white;
+  outline: none;
+  cursor: pointer;
+}
+
+.div2 .btn:focus{
+  background-color: white;
+  border: 1px solid crimson;
+  color: crimson;
+}
+
+.task{
+  background-color: rgba(211, 211, 211, 0.432);
+  border-radius: 5px;
+  color: crimson;
+  padding: .5em;
+  margin-bottom: 5px;
+  margin-top: 1em;
+  /* display: flex;
+  justify-content: space-between; */
+  width: 95%;
+}
+
+.task h3{
+  font-size: large;
+}
+
+.task p{
+  color: black;
+  margin-top: 0;
+}
+
+
+@media screen and (max-width:700px){
+  .header{
+    width: 80%;
+
+  }
+
+  .header .div1 h1{
+    font-size: large;
+  }
+
+  .div2 .btn{
+    padding: .5em 1em;
+  }
+}
+
+
+@media screen and (max-width:500px){
+  .container{
+    width: 80%;
+  }
+  .header{
+    width: 90%;
+    margin: auto;
+
+  }
+
+  .header .div1 h1{
+    font-size: 2em;
+    margin-top: 5px;
+  }
+
+  .div2 .btn{
+    padding: 1em 1.5em;
+    margin-top: 10px;
+    font-size: medium;
+  }
 }
