--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,23 @@ code {
     monospace;
 }
 
-.fa{
-  color: white;
-  font-size: medium;
+.btn-icon{
+  background-color: rgba(220, 20, 60, 0.774);
+  margin: 0 10px;
+  padding: 15px 20px;
+  border: none;
+  border-radius: 5px;
+}
+.btn-icon:hover, .btn-icon:active{
+  background-color: crimson;
   cursor: pointer;
+  outline: none;
+}
+.fa{
+  font-size: larger;
+  cursor: pointer;
+ 
+
 }
 
 .fa-times{
@@ -40,17 +53,47 @@ code {
   padding: 1em;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.596);
 }
-.header{
+
+
+.header .div1{
+  text-align: center;
   display: flex;
   justify-content: space-between;
 
 }
 
-.header .div1{
-   width: 90%;
-  text-align: center;
-
+.header .div1 h1{
+  font-size: 1em;
+  padding: 0;
+  margin-top: -3px;
+  color: crimson;
 }
+
+.header .div1 .btn-add{
+  border: none;
+  padding: 0 20px;
+  border-radius: 5px;
+  /* background-color: green; */
+  color: white;
+  cursor: pointer;
+  outline: none;
+}
+
+.header .div1 .btn-add:active{
+  transform: translateY(-5px);
+  transition: transform 0.2s ease-in;
+}
+
+.header .div1 .btn-open{
+  background-color: green;
+  color: white;
+}
+
+.header .div1 .btn-close{
+  background-color: crimson;
+  color: black;
+}
+
 
 form .inputVal{
   background-color: rgba(211, 211, 211, 0.432);
@@ -67,19 +110,12 @@ form .inputVal{
 .icon{
   display: flex;
   justify-content: flex-start;
-  color: crimson;
 }
 
 
 .task .div3 .icon{
   text-align: center;
-  padding: 1em;
-}
-.header .div1 h1{
-  font-size: 2em;
-  padding: 0;
-  margin-top: -3px;
-  color: crimson;
+  /* padding: 1em; */
 }
 
 .btn{
@@ -107,7 +143,6 @@ form .inputVal{
   padding: .5em;
   margin-bottom: 5px;
   margin-top: 1em;
- 
   /* display: flex;
   justify-content: space-between; */
   width: 95%;
@@ -119,11 +154,13 @@ form .inputVal{
 
 .task h3{
   font-size: large;
+  padding: 0;
 }
 
 .task p{
   color: black;
   margin-top: 0;
+  padding: 0;
 }
 
 .headline{
@@ -131,7 +168,7 @@ form .inputVal{
   text-decoration: underline;
   text-align: center;
   font-size: 2em;
-  color: crimson;
+  color: green;
 }
 
 .div5{
@@ -161,11 +198,15 @@ form .inputVal{
 }
 
 
-@media screen and (max-width:700px){
-  .header{
-    width: 80%;
-
+@media (min-width:700px){
+  
+  .header .div1 .btn-add{
+      padding: 15px 20px;
   }
+}
+
+
+@media screen and (max-width:700px){
 
   .header .div1 h1{
     font-size: large;
@@ -182,18 +223,17 @@ form .inputVal{
     width: 80%;
   }
   .header{
-    width: 90%;
     margin: auto;
 
   }
 
   .header .div1 h1{
-    font-size: 2em;
+    font-size: 1em;
     margin-top: 5px;
   }
 
   .div2 .btn{
-    padding: 1em 1.5em;
+    padding: 0 1.5em;
     margin-top: 10px;
     font-size: medium;
   }
