--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,9 @@ code {
   outline: none;
 }
 .fa{
+ 
   font-size: larger;
   cursor: pointer;
- 
-
 }
 
 .fa-times{
@@ -40,7 +39,7 @@ code {
 }
 
 .fa-edit{
-  color: crimson;
+  color: white;
   font-size: 1.5em;
 }
 
